--- a/frontend/src/app/components/footer/footer.component.html
+++ b/frontend/src/app/components/footer/footer.component.html
@@ -1,1 +1,5 @@
-<p>footer works!</p>
+<mat-toolbar class="footer">
+  <span>Desenvolvido com <em class="material-icons red v-middle">favorite</em>
+    por <strong>Dev.<span class="red">Jr</span></strong>
+  </span>
+</mat-toolbar>
