refactor: change background color header

--- a/frontend/src/app/components/header/header.component.css
+++ b/frontend/src/app/components/header/header.component.css
@@ -1,6 +1,7 @@
 .header {
   display: flex;
   align-items: center;
+  background: #C53030;
 }
 
 .header a {
@@ -19,4 +20,8 @@
 
 .header .title-group em {
   padding-right: 5px;
+}
+
+.header .title-group a {
+  color: #FFF;
 }
