--- a/frontend/src/app/components/nav/nav.component.html
+++ b/frontend/src/app/components/nav/nav.component.html
@@ -1,1 +1,15 @@
-<p>nav works!</p>
+<mat-sidenav-container class="container">
+  <mat-sidenav class="sidenav" mode="side" opened fixedInViewport="true" 
+    fixedTopGap="64">
+    <mat-nav-list class="nav-list">
+      <a mat-list-item>
+        <em class="material-icons">home</em>
+        Início
+      </a>
+      <a mat-list-item>
+        <em class="material-icons">storefront</em>
+        Início
+      </a>
+    </mat-nav-list>
+  </mat-sidenav>
+</mat-sidenav-container>
