refactor: change name on heaader to Plus Cursos

--- a/frontend/src/app/components/header/header.component.html
+++ b/frontend/src/app/components/header/header.component.html
@@ -7,7 +7,7 @@
   <span class="title-group">
     <a href="#">
       <em class="material-icons">home</em>
-      Aplicação CRUD
+      Plus Cursos
     </a>
   </span>
 </mat-toolbar>
