refactor: change title in header component

--- a/frontend/src/app/components/header/header.component.html
+++ b/frontend/src/app/components/header/header.component.html
@@ -6,8 +6,7 @@
   </span>
   <span class="title-group">
     <a href="#">
-      <em class="material-icons">home</em>
-      Plus Cursos
+      Plus Delivery
     </a>
   </span>
 </mat-toolbar>
