cahnge title nav

--- a/frontend/src/app/components/nav/nav.component.html
+++ b/frontend/src/app/components/nav/nav.component.html
@@ -8,7 +8,7 @@
       </a>
       <a mat-list-item>
         <em class="material-icons">storefront</em>
-        Início
+        Produtos
       </a>
     </mat-nav-list>
   </mat-sidenav>
