--- a/frontend/src/app/components/products/products-create/products-create.component.html
+++ b/frontend/src/app/components/products/products-create/products-create.component.html
@@ -1,1 +1,13 @@
-<p>products-create works!</p>
+<mat-card>
+  <mat-card-title>Novo Produto</mat-card-title>
+  <form>
+    <mat-form-field>
+      <input matInput placeholder="Nome" name="name" [(ngModel)]="product.name">
+    </mat-form-field>
+    <mat-form-field>
+      <input matInput placeholder="Preço (R$)" name="price" [(ngModel)]="product.price">
+    </mat-form-field>
+  </form>
+  <button mat-raised-button color="primary" (click)="createProduct()">Salvar</button>
+  <button mat-raised-button color="accent" (click)="cancelProduct()">Cancelar</button>
+</mat-card>
