--- a/frontend/src/app/components/products/products-list/products-list.component.html
+++ b/frontend/src/app/components/products/products-list/products-list.component.html
@@ -18,6 +18,19 @@
       <td mat-cell *matCellDef="let row">{{ row.price | currency: 'BRL'}}</td>
     </ng-container>
 
+    <!-- Actions Column -->
+    <ng-container matColumnDef="actions">
+      <th mat-header-cell *matHeaderCellDef>Ações</th>
+      <td mat-cell *matCellDef="let row">
+        <a routerLink="/">
+          <em class="material-icons edit">edit</em>
+        </a>
+        <a routerLink="/">
+          <em class="material-icons delete">delete</em>
+        </a>
+      </td>
+    </ng-container>
+
     <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
     <tr mat-row *matRowDef="let row; columns: displayedColumns;"></tr>
   </table>
