--- a/frontend/src/app/components/products/products-list/products-list.component.html
+++ b/frontend/src/app/components/products/products-list/products-list.component.html
@@ -9,20 +9,20 @@
     <!-- Name Column -->
     <ng-container matColumnDef="name">
       <th mat-header-cell *matHeaderCellDef>Nome</th>
-      <td mat-cell *matCellDef="let row">{{row.name}}</td>
+      <td mat-cell *matCellDef="let product">{{product.name}}</td>
     </ng-container>
 
     <!-- Price Column -->
     <ng-container matColumnDef="price">
       <th mat-header-cell *matHeaderCellDef>Preço</th>
-      <td mat-cell *matCellDef="let row">{{ row.price | currency: 'BRL'}}</td>
+      <td mat-cell *matCellDef="let product">{{ product.price | currency: 'BRL'}}</td>
     </ng-container>
 
     <!-- Actions Column -->
     <ng-container matColumnDef="actions">
       <th mat-header-cell *matHeaderCellDef>Ações</th>
-      <td mat-cell *matCellDef="let row">
-        <a routerLink="/">
+      <td mat-cell *matCellDef="let product">
+        <a routerLink="/products/update/{{product.id}}">
           <em class="material-icons edit">edit</em>
         </a>
         <a routerLink="/">
